--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,10 @@
     right: 100px;
     opacity: 0;
 }
+.invalid-feedback
+{
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #e3342f;
+}   
